crates/es-fluent-derive/tests/ui/fluent_label_variants_requires_variants.stderr
error[E0277]: the trait bound `LoginForm: es_fluent::__private::EsFluentVariantsLabelWasDerived` is not satisfied
 --> tests/ui/fluent_label_variants_requires_variants.rs:7:12
  |
7 | pub struct LoginForm {
  |            ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `es_fluent::__private::EsFluentVariantsLabelWasDerived` is not implemented for `LoginForm`
 --> tests/ui/fluent_label_variants_requires_variants.rs:7:1
  |
7 | pub struct LoginForm {
  | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `es_fluent::__private::EsFluentLabelVariantsRequiresEsFluentVariants`
 --> $WORKSPACE/crates/es-fluent/src/lib.rs
  |
  |     pub trait EsFluentLabelVariantsRequiresEsFluentVariants:
  |               --------------------------------------------- required by a bound in this trait
  |         EsFluentVariantsLabelWasDerived
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EsFluentLabelVariantsRequiresEsFluentVariants`
